# Bankruptcy-predictor

./: README.md  docker-compose.yml  openapi_schema.json  test_endpoint.py
App/: main.py  pyproject.toml  requirements.txt
Backend/: Dockerfile  main.py  model.json  pyproject.toml  requirements.txt
Frontend/: Dockerfile  app.py  pyproject.toml  requirements.txt
Training/: EDA.ipynb  inference_test copy.csv  inference_test.csv
