[project]
name = "inft-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.0",
    "xgboost>=3.0.0",
]
