[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "great-expectations>=0.18.22",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "shap>=0.47.1",
    "uvicorn>=0.34.1",
    "xgboost>=3.0.0",
]
